--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "d3-format": "^1.4.4",
     "d3-time-format": "^2.2.3",
     "draft-js": "^0.11.5",
+    "faker": "^5.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^8.1.1",
     "history": "^4.10.1",
