--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     ]
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.17",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@amcharts/amcharts4-geodata": "^4.1.19",
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.10.0",
     "axios": "^0.21.1",
