--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^4.5.3",
+    "bootstrap-daterangepicker": "^3.1.0",
     "c3": "^0.4.24",
     "chalk": "^4.1.0",
     "chart.js": "^2.9.3",
@@ -55,6 +56,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.1.1",
     "history": "^4.10.1",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "2.27.0",
@@ -64,6 +66,7 @@
     "qs": "^6.9.3",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-c3js": "^0.1.20",
     "react-chartist": "^0.14.3",
     "react-chartjs-2": "^2.9.0",
