--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "faker": "^5.4.0",
     "file-saver": "^2.0.5",
     "firebase": "^8.1.1",
+    "highcharts": "^9.0.1",
+    "highcharts-react-official": "^3.0.0",
     "history": "^4.10.1",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
