--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "REACT_APP_API_URL=http://34.87.20.124 react-app-rewired start",
+    "start": "REACT_APP_API_URL=http://45.117.169.119:7777 react-app-rewired start",
     "start-local": "REACT_APP_API_URL=http://localhost react-app-rewired start",
-    "build": "react-app-rewired build",
+    "build": "REACT_APP_API_URL=http://45.117.169.119:7777 react-app-rewired build",
     "test": "react-app-rewired test",
     "lint-staged": "lint-staged",
     "prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx,scss,less}\"",
