--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@amcharts/amcharts4-geodata": "^4.1.19",
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.10.0",
+    "apexcharts": "^3.26.3",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.19.0",
     "bootstrap": "^4.5.3",
@@ -67,6 +68,7 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.3",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-beautiful-dnd": "^13.0.0",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-c3js": "^0.1.20",
