--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "lodash": "^4.17.15",
     "moment": "2.27.0",
     "nprogress": "^0.2.0",
-    "prismjs": "^1.22.0",
     "prop-types": "^15.7.2",
     "qs": "^6.9.3",
     "react": "^17.0.1",
@@ -82,6 +81,7 @@
     "react-helmet": "^6.0.0",
     "react-highlight-words": "^0.16.0",
     "react-intl": "^5.8.4",
+    "react-json-view": "^1.21.3",
     "react-jvectormap": "^0.0.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
